<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background">


    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:id="@+id/imageView3"
        android:layout_marginTop="40dp"
        android:background="@drawable/icon"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/brand_list"
        android:background="@drawable/btn_main"
        android:textStyle="italic|bold"
        android:id="@+id/brands"
        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mtv"
        android:background="@drawable/btn_main"
        android:textStyle="italic|bold"
        android:id="@+id/mytv"
        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:background="@drawable/btn_main"
        android:textStyle="italic|bold"
        android:id="@+id/theme"
        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:background="@drawable/btn_main"
        android:textStyle="italic|bold"
        android:id="@+id/about"
        />

</LinearLayout>