<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="app.tvremote.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="58dp"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_theme"
            android:textColor="#000"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="28sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/black_theme"
            android:layout_marginTop="70dp"
            android:background="@drawable/black_theme" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme"
                android:layout_below="@id/black_theme"
                android:textSize="20sp"
                android:layout_marginTop="20dp"/>

        <ImageButton
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/white_theme"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@+id/black_theme"
            android:background="@drawable/white_theme" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/white_theme"
                android:layout_below="@+id/white_theme"
                android:layout_alignRight="@id/white_theme"
                android:textSize="20sp"
                android:layout_marginTop="20dp"/>
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/banner_home_footer"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
